--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+    <!-- favicon -->
+    <link rel="icon" href="./dictionary.png" />
+    <!-- <link rel="icon" href="https://icons.veryicon.com/png/o/miscellaneous/intelligent-collection-management-system/29-data-dictionary.png" /> -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
