add pwa icon support for ios

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+    <!-- pwa icon support for ios devices -->
+     <link rel="apple-touch-icon" href="./icons/apple-icon-180.png">
+
     <!-- favicon -->
     <link rel="icon" href="./dictionary.png" />
     <!-- <link rel="icon" href="https://icons.veryicon.com/png/o/miscellaneous/intelligent-collection-management-system/29-data-dictionary.png" /> -->
